--- a/ref_trace_decoder/docs/doxygen_config.dox
+++ b/ref_trace_decoder/docs/doxygen_config.dox
@@ -32,13 +32,13 @@ DOXYFILE_ENCODING      = UTF-8
 # title of most generated pages and in a few other places.
 # The default value is: My Project.
 
-PROJECT_NAME           = "Reference CoreSight Trace Decode Library"
+PROJECT_NAME           = "OpenCSD - CoreSight Trace Decode Library"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = 1.0
+PROJECT_NUMBER         = 0.001
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
@@ -768,7 +768,11 @@ INPUT                  = ../include \
                          ../include/etmv3 \
                          ../include/etmv4 \
                          ../include/ptm \
-                         ../include/c_api
+                         ../include/c_api \
+                         ../include/stm \
+                         ../include/mem_acc \
+                         ../../README.md \
+                         .
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
